--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Installation",
   "main": "index.js",
   "scripts": {
-    "generate-bindings": "bash generate-bindings.sh",
+    "build": "make all",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
