--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Installation",
   "main": "index.js",
   "scripts": {
-    "build": "make all",
+    "build": "make build",
+    "build-all": "make all",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
