Ignore pkg/bindings from golangci-lint.
Signed-off-by: Ashish Mishra <ashish10677@gmail.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,6 +27,7 @@ jobs:
         uses: golangci/golangci-lint-action@v2
         with:
           version: v1.29
+	  args: --skip-dirs=razor/pkg/bindings
     
       - name: Test
         run: go test -v ./...
