--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "make build",
     "build-all": "make all",
+    "dockerize-build": "make docker-build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
