Influence changes made.
Need to test.

Signed-off-by: Ashish Mishra <ashish10677@gmail.com>

--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   },
   "homepage": "https://github.com/ashish10677/go-cli#readme",
   "dependencies": {
-    "@razor-network/contracts": "^0.1.1"
+    "@razor-network/contracts": "0.1.3"
   }
 }
