--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,47 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 jobs:
-  build:
+  checkout_source:
+    docker:
+      - image: cimg/node:16.5
+    steps:
+      - checkout
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .
+
+  install_dependencies_and_setup:
+    docker:
+      - image: cimg/node:16.5
+    steps:
+      - attach_workspace:
+          at: .
+      - restore_cache:
+          keys:
+            - dependencies-{{ checksum "package-lock.json" }}
+      - run:
+          name: Install dependencies
+          command: |
+            npm install
+            npm run setup
+      - save_cache:
+          key: dependencies-{{ checksum "package-lock.json" }}
+          paths:
+            - node_modules
+      - persist_to_workspace:
+          root: .
+          paths:
+            - node_modules/*
+            - pkg/*
+
+  test:
     working_directory: ~/repo
     docker:
       - image: circleci/golang:1.15.8
     steps:
-      - checkout
+      - attach_workspace:
+          at: .
       - restore_cache:
           keys:
             - go-mod-v4-{{ checksum "go.sum" }}
