--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "razor-go",
-  "version": "v0.1.3", "description": "Official node for running stakers in Golang.",
+  "version": "v0.1.3",
+  "description": "Official node for running stakers in Golang.",
   "main": "index.js",
   "scripts": {
     "build": "make build",
