--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,7 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
+orbs:
+  node: circleci/node@4.7.0
 jobs:
   checkout_source:
     docker:
@@ -11,37 +13,22 @@ jobs:
           paths:
             - .
 
-  install_geth:
-    docker:
-      - image: circleci/golang:1.15.8
-    steps:
-      - attach_workspace:
-          at: .
-      - run:
-          name: Install go-ethereum
-          command: go get -d github.com/ethereum/go-ethereum
-      - run:
-          name: Install go-ethereum Executables
-          command: go install github.com/ethereum/go-ethereum/cmd/geth
-      - persist_to_workspace:
-          root: .
-          paths:
-            - .
-
   install_dependencies_and_setup:
     docker:
-      - image: cimg/node:16.5
+      - image: ethereum/client-go:v1.10.6
     steps:
       - attach_workspace:
           at: .
       - restore_cache:
           keys:
             - dependencies-{{ checksum "package-lock.json" }}
-      - run:
-          name: Install dependencies
-          command: |
-            npm install
-            npm run setup
+      - node/install:
+          install-yarn: false
+      - node/install-packages:
+          cache-path: node_modules
+          override-ci-command: npm install
+      - node/run:
+          npm-run: setup
       - save_cache:
           key: dependencies-{{ checksum "package-lock.json" }}
           paths:
@@ -80,11 +67,9 @@ workflows:
   tests:
     jobs:
       - checkout_source
-      - install_geth
       - install_dependencies_and_setup:
           requires:
             - checkout_source
-            - install_geth
       - test:
           requires:
             - install_dependencies_and_setup
