--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,8 @@ jobs:
             - .
 
   install_dependencies_and_setup:
+    machine:
+      image: ubuntu-1604:202104-01
     docker:
       - image: ethereum/client-go:v1.10.6
     steps:
