--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,5 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-orbs:
-  node: circleci/node@4.7.0
 jobs:
   checkout_source:
     docker:
@@ -13,24 +11,39 @@ jobs:
           paths:
             - .
 
-  install_dependencies_and_setup:
-    machine:
-      image: ubuntu-1604:202104-01
+  install_geth:
     docker:
-      - image: ethereum/client-go:v1.10.6
+      - image: circleci/golang:1.15.8
+    steps:
+      - attach_workspace:
+          at: .
+      - run:
+          name: Install go-ethereum
+          command: |
+            go get -u github.com/ethereum/go-ethereum
+            cd $GOPATH/src/github.com/ethereum/go-ethereum/
+            make
+            make devtools
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .
+
+
+  install_dependencies_and_setup:
+    docker:
+      - image: cimg/node:16.5
     steps:
       - attach_workspace:
           at: .
       - restore_cache:
           keys:
             - dependencies-{{ checksum "package-lock.json" }}
-      - node/install:
-          install-yarn: false
-      - node/install-packages:
-          cache-path: node_modules
-          override-ci-command: npm install
       - run:
-          command: npm run setup
+          name: Install dependencies
+          command: |
+            npm install
+            npm run setup
       - save_cache:
           key: dependencies-{{ checksum "package-lock.json" }}
           paths:
@@ -72,6 +85,7 @@ workflows:
       - install_dependencies_and_setup:
           requires:
             - checkout_source
+            - install_geth
       - test:
           requires:
             - install_dependencies_and_setup
