--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,10 +21,9 @@ jobs:
           name: Install go-ethereum
           command: |
             go get -u github.com/ethereum/go-ethereum
-            
       - persist_to_workspace:
+          root: /
           paths:
-            - .
             - $GOPATH/src/github.com/ethereum/go-ethereum
 
 
