--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
       - persist_to_workspace:
           paths:
             - .
-            - $GOPATH/src/github.com/ethereum/go-ethereum
+            - /go/src/github.com/ethereum/go-ethereum
 
 
   install_dependencies_and_setup:
