--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,3 +39,8 @@ jobs:
             gotestsum --junitfile /tmp/test-reports/unit-tests.xml
       - store_test_results:
           path: /tmp/test-reports
+
+workflows:
+  tests:
+    jobs:
+      - test
