install abigen via go

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,7 @@ jobs:
           name: Install go-ethereum and abigen
           command: |
             go get -u github.com/ethereum/go-ethereum@v1.10.6
-            cd $GOPATH/src/github.com/ethereum/go-ethereum/
-            make
-            make devtools
+            go install github.com/ethereum/go-ethereum/cmd/geth
       - node/install:
           install-yarn: false
       - run: node --version
