--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,52 +1,30 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
+orbs:
+  node: circleci/node@4.7.0
 jobs:
-  checkout_source:
-    docker:
-      - image: cimg/node:16.5
-    steps:
-      - checkout
-      - persist_to_workspace:
-          root: .
-          paths:
-            - .
-
-  install_dependencies_and_setup:
-    docker:
-      - image: cimg/node:16.5
-    steps:
-      - attach_workspace:
-          at: .
-      - restore_cache:
-          keys:
-            - dependencies-{{ checksum "package-lock.json" }}
-      - run:
-          name: Install dependencies
-          command: |
-            npm install
-            npm run setup
-      - save_cache:
-          key: dependencies-{{ checksum "package-lock.json" }}
-          paths:
-            - node_modules
-      - persist_to_workspace:
-          root: .
-          paths:
-            - node_modules/*
-            - pkg/*
-
   test:
-    working_directory: ~/repo
     docker:
       - image: circleci/golang:1.15.8
     steps:
-      - attach_workspace:
-          at: .
+      - checkout
+      - run:
+          name: Install go-ethereum and abigen
+          command: |
+            go get -u github.com/ethereum/go-ethereum@v1.10.6
+            go install github.com/ethereum/go-ethereum/cmd/abigen
+      - node/install:
+          install-yarn: false
+      - run: node --version
+      - node/install-packages:
+          cache-path: node_modules
+          override-ci-command: npm install
+      - run: npm run setup
       - restore_cache:
           keys:
             - go-mod-v4-{{ checksum "go.sum" }}
       - run:
-          name: Install Dependencies
+          name: Install Project Dependencies
           command: go mod download
       - save_cache:
           key: go-mod-v4-{{ checksum "go.sum" }}
@@ -59,3 +37,8 @@ jobs:
             gotestsum --junitfile /tmp/test-reports/unit-tests.xml
       - store_test_results:
           path: /tmp/test-reports
+
+workflows:
+  tests:
+    jobs:
+      - test
