--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,12 +22,12 @@ jobs:
       - run: npm run setup
       - restore_cache:
           keys:
-            - go-mod-v4-{{ checksum "go.sum" }}
+            - go-mod-v4-{{ .Environment.CACHE_VERSION }}-{{ checksum "go.sum" }}
       - run:
           name: Install Project Dependencies
           command: go mod download
       - save_cache:
-          key: go-mod-v4-{{ checksum "go.sum" }}
+          key: go-mod-v4-{{ .Environment.CACHE_VERSION }}-{{ checksum "go.sum" }}
           paths:
             - "/go/pkg/mod"
       - run:
