--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,10 +2,10 @@ name: Go
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, develop ]
     tags: [ v* ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, develop ]
     
 jobs:
   
