Change log.Info to log.Debug at unnecessary places. Removed icons from log. Removed sleep animations.
Signed-off-by: Ashish Mishra <ashish10677@gmail.com>

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "make build",
     "build-all": "make all",
     "build-noargs": "make build-noargs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "go test ./... -v"
   },
   "repository": {
     "type": "git",
