ignore pkg in goveralls (#287)
* ignore pkg in goveralls

* ignore ALL files in pkg

* ignore pkg in test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
       - run:
           name: "Generate Coverage"
           command: |
-            go-acc ./...
+            go-acc ./... --ignore pkg 
       - run:
           name: "Publish Coverage to Coveralls.io"
           command: |
