--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3"
 services:
   razor-go:
+    #platform: linux/x86_64 #Uncomment for silicon based MAC
     container_name: razor-go
     image: razornetwork/razor-go
     build: .
