--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,11 +41,14 @@ jobs:
             - .
   push-build:
     docker:
-      - image: circleci/golang:1.15.8
+      - image: circleci/docker:1.15.8]
     steps:
       - checkout
       # - attach_workspace:
       #   at: .
+      - setup_remote_docker:
+          version: 20.10.7
+          docker_layer_caching: true
       - run:
           name: "Build docker image"
           command: |
@@ -53,7 +56,7 @@ jobs:
 workflows:
   tests:
     jobs:
-      - test
+      # - test
       - push-build
         # requires:
         #   - test
