--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,8 @@ jobs:
   push-build:
     docker:
       - image: circleci/golang:1.15.8
+        environment:
+          IMAGE_NAME: "razornetwork/razor-go"
     steps:
       - checkout
       # - attach_workspace:
@@ -52,7 +54,11 @@ jobs:
       - run:
           name: "Build docker image"
           command: |
-            docker build -t razor-go .
+            echo “$DOCKERHUB_PASSWORD” | docker login -u “$DOCKERHUB_USERNAME” — password-stdin
+            docker build -t $IMAGE_NAME .
+            docker images
+
+          # docker push $IMAGE_NAME:latest
 workflows:
   tests:
     jobs:
