--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
       - run:
           name: "Build docker image"
           command: |
-            docker login -u $DOCKERHUB_USERNAME” -p $DOCKERHUB_PASSWORD”
+            echo “$DOCKERHUB_PASSWORD” | docker login -u “$DOCKERHUB_USERNAME” —-password-stdin
             docker build -t $IMAGE_NAME .
             docker images
 
