--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,12 +30,42 @@ jobs:
       - run:
           name: "Generate Coverage"
           command: |
-            go-acc ./... --ignore pkg 
+            go-acc ./... --ignore pkg
       - run:
           name: "Publish Coverage to Coveralls.io"
           command: |
             goveralls -coverprofile=coverage.txt -service semaphore -repotoken $COVERALLS_TOKEN
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .
+  push-build:
+    docker:
+      - image: circleci/golang:1.15.8
+        environment:
+          IMAGE_NAME: "razornetwork/razor-go"
+
+    steps:
+      - checkout
+      - setup_remote_docker:
+          version: 20.10.7
+          docker_layer_caching: true
+      - run:
+          name: "Build docker image"
+          command: |
+            echo "$DOCKERHUB_PASSWORD" | docker login https://registry.hub.docker.com --username "$DOCKERHUB_USERNAME" --password-stdin
+            docker build -t $IMAGE_NAME:$CIRCLE_TAG .
+            docker push $IMAGE_NAME:$CIRCLE_TAG
 workflows:
   tests:
     jobs:
       - test
+  publish:
+    jobs:
+      - push-build:
+          context: Build
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
