--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,18 +57,34 @@ jobs:
             docker build -t $IMAGE_NAME:$CIRCLE_TAG .
             docker push $IMAGE_NAME:$CIRCLE_TAG
   arm-build:
-    machine:
-      image: ubuntu-2004:202101-01
-    resource_class: arm.medium
-    # machine: true
-    # resource_class: shrikant-ns/local-large
-    environment:
-      IMAGE_NAME: "razornetwork/razor-go"
+    docker:
+      - image: cimg/go:1.17.6
+        environment:
+          IMAGE_NAME: "razornetwork/razor-go"
+          # DOCKER_BUILDKIT: 1
+          # BUILDX_PLATFORMS: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/386,linux/arm/v7,linux/arm/v6
+
     steps:
       - checkout
+      - setup_remote_docker:
+          version: 20.10.7
+          docker_layer_caching: true
       - run:
-          name: Build
-          command: docker build .
+          name: Install Docker Buildx
+          command: |
+            mkdir -vp ~/.docker/cli-plugins/
+            curl --silent -L "https://github.com/docker/buildx/releases/download/v0.5.1/buildx-v0.5.1.linux-amd64" > ~/.docker/cli-plugins/docker-buildx
+            chmod a+x ~/.docker/cli-plugins/docker-buildx
+            docker buildx version
+            sudo apt-get update && sudo apt-get install -y binfmt-support qemu-user-static
+            docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+            docker run --privileged --rm tonistiigi/binfmt --install arm64
+            docker context create buildcontext
+            docker buildx create buildcontext --use
+      - run:
+          name: "Build docker image"
+          command: |
+            docker buildx build --tag $IMAGE_NAME .
 workflows:
   # tests:
   #   jobs:
