--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,8 +84,7 @@ jobs:
       - run:
           name: "Build docker image"
           command: |
-            docker buildx build --tag $IMAGE_NAME .
-workflows:
+              docker buildx build --platform linux/arm64/v8 --tag $IMAGE_NAME:$CIRCLE_TAG .workflows:
   # tests:
   #   jobs:
   #     - test
