Updated ci for arm

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,7 +84,10 @@ jobs:
       - run:
           name: "Build docker image"
           command: |
-              docker buildx build --platform linux/arm64/v8 --tag $IMAGE_NAME:$CIRCLE_TAG .workflows:
+            docker buildx build --platform linux/arm64/v8 --tag $IMAGE_NAME:$CIRCLE_TAG .
+    #            docker buildx build --push --platform linux/arm64/v8 --tag $IMAGE_NAME:$CIRCLE_TAG .
+    # echo "$DOCKERHUB_PASSWORD" | docker login --username "$DOCKERHUB_USERNAME" --password-stdin
+workflows:
   # tests:
   #   jobs:
   #     - test
