--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,6 +84,7 @@ jobs:
           command: |
 
             docker buildx build --platform linux/arm64/v8,linux/amd64 --tag $IMAGE_NAME .
+            docker images
 
 workflows:
   # tests:
