--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
       - run:
           name: "Generate Coverage"
           command: |
-            go-acc ./... --ignore pkg ./accounts/mocks
+            go-acc ./... --ignore pkg ./*/mocks
       - run:
           name: "Publish Coverage to Coveralls.io"
           command: |
