--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,9 @@ jobs:
       - run:
           name: "Generate Coverage"
           command: |
-            go-acc ./... --ignore pkg ./*/mocks
+            go-acc ./... --ignore pkg razor/*/mocks
+            go-acc ./... --ignore razor/*/mocks
+            go-acc ./... --ignore pkg razor/accounts/mocks
       - run:
           name: "Publish Coverage to Coveralls.io"
           command: |
