--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
       - run:
           name: "Generate Coverage"
           command: |
-            go-acc ./... --ignore razor/accounts/mocks
+            go-acc ./... --ignore razor/accounts/mocks --ignore pkg
       - run:
           name: "Publish Coverage to Coveralls.io"
           command: |
