--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,13 +5,13 @@ orbs:
 jobs:
   test:
     docker:
-      - image: circleci/golang:1.15.8
+      - image: golang:1.17
     steps:
       - checkout
       - run:
           name: Install go-ethereum and abigen
           command: |
-            go get -u github.com/ethereum/go-ethereum@v1.10.6
+            go get -d -u github.com/ethereum/go-ethereum
             go install github.com/ethereum/go-ethereum/cmd/abigen
       - node/install:
           install-yarn: false
