--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,13 +5,13 @@ orbs:
 jobs:
   test:
     docker:
-      - image: golang:1.17
+      - image: cimg/go:1.17.6
     steps:
       - checkout
       - run:
           name: Install go-ethereum and abigen
           command: |
-            go get -d -u github.com/ethereum/go-ethereum
+            go get -u github.com/ethereum/go-ethereum@vv1.10.8
             go install github.com/ethereum/go-ethereum/cmd/abigen
       - node/install:
           install-yarn: false
