--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
 jobs:
   test:
     docker:
-      - image: cimg/go:1.17.6
+      - image: circleci/golang:1.15.8
     steps:
       - checkout
       - run:
