--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
 jobs:
   test:
     docker:
-      - image: circleci/golang:1.15.8
+      - image: cimg/go:1.16
     steps:
       - checkout
       - run:
