--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
 jobs:
   test:
     docker:
-      - image: cimg/go:1.16
+      - image: golang:1.16-alpine
     steps:
       - checkout
       - run:
