--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,14 +5,14 @@ orbs:
 jobs:
   test:
     docker:
-      - image: golang:1.16-alpine
+      - image: golang:1.16
     steps:
       - checkout
       - run:
           name: Install go-ethereum and abigen
           command: |
             go get -d github.com/ethereum/go-ethereum@v1.10.8
-            go install github.com/ethereum/go-ethereum/cmd/abigen
+            go install github.com/ethereum/go-ethereum/cmd/abigen@latest
       - node/install:
           install-yarn: false
       - run: node --version
