--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-orbs:
-  node: circleci/node@4.7.0
+# orbs:
+#   node: circleci/node@4.7.0
 jobs:
   test:
     docker:
@@ -13,12 +13,12 @@ jobs:
           command: |
             go get -d github.com/ethereum/go-ethereum@v1.10.8
             go install github.com/ethereum/go-ethereum/cmd/abigen@v1.10.8
-      - node/install:
-          install-yarn: false
-      - run: node --version
-      - node/install-packages:
-          override-ci-command: npm install
-      - run: npm run setup
+      # - node/install:
+      #     install-yarn: false
+      # - run: node --version
+      # - node/install-packages:
+      #     override-ci-command: npm install
+      # - run: npm run setup
       - run:
           name: Install Project Dependencies
           command: go mod download
