--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ version: 2.1
 jobs:
   test:
     docker:
-      - image: golang:1.17
+      - image: cimg/go:1.17.6
     steps:
       - checkout
       - setup_remote_docker:
